--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -9,13 +9,13 @@
     <div class="col-sm">
         Ola {{ usuario.funcionario.name }}
     </div>
-    <div class="col-sm">
+    <div class="col-sm"> 
         <a href="{% url 'logout' %}">Logout</a>
 
         {% if usuario.funcionario.empresa %}
             <a href="{% url 'edit_empresa' usuario.funcionario.empresa.id %}">Editar empresa</a>
         {% else %}
-            <a href="">Criar empresa</a>
+            <a href="{% url 'create_empresa' %}">Criar empresa</a>
         {% endif %}
 
     </div>
