--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -8,6 +8,7 @@
     </div>
     <div class="col-sm">
         Ola {{ usuario.funcionario.name }}
+        <a href="{% url 'funcionarios_list' %}">Gerenciar Funcionarios</a>
     </div>
     <div class="col-sm"> 
         <a href="{% url 'logout' %}">Logout</a>
