Finish adding Crud Funcionarios and Update

--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -10,7 +10,7 @@ Edit
 
     {{ form }}
 
-    <button type="submit">Salvar</button>
+    <button type="submit" class="btn btn-primary">Salvar</button>
 </form>
 
 {% endblock %}
